--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-<html>
-  
+<html>  
 <head>
-  <title></title>
+  <title>eine weitere Website</title>
   </head>
-  <body>
-    <h1>Hello World
-    </h1>
+  <body bgcolor="#333">
+    <h1>Hello World</h1>
   </body>
 </html>
   
