--- a/index.html
+++ b/index.html
@@ -1,9 +1,2 @@
-<html>  
-<head>
-  <title>eine weitere Website</title>
-  </head>
-  <body bgcolor="#333">
-    <h1>Hello World</h1>
-  </body>
-</html>
+Hello World!
   
