--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-Hello World!
+<!DOCTYPE html><html>
+  <head>
+   <script src="p5.js"></script>
+     <meta charset="utf-8">
+    <title>Bee Gi</title>
+  </head>
+  <body>
+  <script src="sketch.js"></script>   
+  </body>
+</html>
   
