--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.min.js"></script>
      <meta charset="utf-8">
-    <title>Bee Gi</title>
+    <title>eine weitere Website</title>
   </head>
   <body>
   <script src="sketch.js"></script>   
