--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>eine weitere Website</title>
   </head>
   <body>
-  <script src="sketch.js"></script>   
+    <h2>Hello world</h2> 
   </body>
 </html>
   
