--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
   <head>
-  <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.min.js"></script>
+  <script src="p5.min.js"></script>
      <meta charset="utf-8">
     <title>eine weitere Website</title>
   </head>
