--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
   <head>
   <script src="p5.min.js"></script>
      <meta charset="utf-8">
-    <title>eine weitere Website</title>
+    <title></title>
   </head>
   <body>
-    <h2>Hello world</h2> 
+  
   </body>
 </html>
   
