--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html><html>
   <head>
-  <script src="p5.min.js"></script>
+  <script src="sketch.js"></script>
      <meta charset="utf-8">
     <title></title>
   </head>
   <body>
-  
+  <h2>Hello world</h2>
   </body>
 </html>
   
