--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html><html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <skript>source=sketch.js</skript>
+    <title>eine weitere Website</title>
   </head>
   <body>
-  <h2>Hello world</h2>
-    <p>I love :tea and :sandwiches.</p>
+  
   </body>
 </html>
   
