--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html><html>
   <head>
     <meta charset="utf-8">
-    <skript>source=sketch.js</skript>
-    <title>eine weitere Website</title>
+     <title>eine weitere Website</title>
   </head>
   <body>
-  
+  <script src="sketch.js"></script>
+ 
   </body>
 </html>
   
