--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html><html>
   <head>
-    <meta charset="utf-8">
-     <script src="p5.min.js"></script>
-     <title>eine weitere Website</title>
+   <script src="p5.min.js"></script>
+
+   <meta charset="utf-8">
+     <title>bsteinsiepe</title>
   </head>
   <body>
   <script src="sketch.js"></script>
- 
+
   </body>
 </html>
   
